--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Food Delivery Services in India |MyOnlineMeal.com</title>
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" media="screen and (max-width: 942px)" href="/CSS/phone.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 942px)" href="CSS/phone.css">
     <link rel="icon" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
