--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
         <h1 class="h-primary center">Our Services</h1>
         <div id="services">
             <div class="box">
-                <img src="/Sample_Image/Pizza.png" alt="Food Image">
+                <img src="Sample_Image/Pizza.png" alt="Food Image">
                 <h2 class="h-secondary center">Food Catering</h2>
                 <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas perspiciatis ex sunt quidem repellat odit at pariatur non quo reiciendis corrupti voluptatibus accusantium doloremque quam, repellendus officiis similique necessitatibus aperiam!</p>
             </div>
             <div class="box">
-                <img src="/Sample_Image/Food.png" alt="Food Image">
+                <img src="Sample_Image/Food.png" alt="Food Image">
                 <h2 class="h-secondary center">Bulk Ordering</h2>
                 <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas perspiciatis ex sunt quidem repellat odit at pariatur non quo reiciendis corrupti voluptatibus accusantium doloremque quam, repellendus officiis similique necessitatibus aperiam!</p>
             </div>
             <div class="box">
-                <img src="/Sample_Image/Food Delivery Logo.png">
+                <img src="Sample_Image/Food Delivery Logo.png">
                 <h2 class="h-secondary center">Food Ordering</h2>
                 <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas perspiciatis ex sunt quidem repellat odit at pariatur non quo reiciendis corrupti voluptatibus accusantium doloremque quam, repellendus officiis similique necessitatibus aperiam!</p>
             </div>
